# rai-srcmanager

./: .bazelrc.travis  .gitignore  .travis.yml  BUILD.bazel  Gopkg.toml  LICENSE.txt  Makefile  README.md  WORKSPACE  bitbucket-pipelines.yml  esc.bzl  glide.yaml  go.mod  go.sum  lock.json  main.go  manifest.json  repositories  resource_gen.go  version.go
cmd/: BUILD.bazel  bumpversion.go  commit.go  dirty.go  goget.go  license.go  resources.go  root.go  static_content.go  update.go  version.go
pkg/: BUILD.bazel  resource.go  srcmanager.go  static_content.go  vcs.go  vcserrors.go
pkg/template/: .travis.yml
